--- a/Family and friends.html
+++ b/Family and friends.html
@@ -10,7 +10,7 @@
 <style>
     
         body {
-          background-image: url('images/synonymroll.gif');
+          background-image: url('images/desktop wallpaper.jfif');
           background-repeat: no-repeat;
           background-attachment: fixed;
           background-size: cover;
